# beacon

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  install.sh  render.yaml
.github/workflows/: release.yml
assets/: miniapp.js
contract/: BeaconIdentity.sol
src/: a2a.rs  agentic_wallet.rs  analytics.rs  db.rs  eas.rs  export.rs  generator.rs  health.rs  identity.rs  inferrer.rs  ipfs.rs  main.rs  mcp.rs  models.rs  openclaw.rs  ratelimit.rs  registry.rs  reviews.rs  scanner.rs  status.rs  tags.rs  tests.rs  validator.rs  webhooks.rs  x402.rs  zk.rs
src/farcaster/: api.rs  autoposter.rs  bot.rs  miniapp.rs  mod.rs  neynar.rs  og.rs
