[package]
name = "beacon"

version = "0.3.4"
edition = "2021"

[[bin]]
name = "beacon"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
axum = "0.8.1"
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2"
postgrest = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ethers-core = { version = "2.0.14" }
ethers-contract = { version = "2.0.14", features = ["abigen"] }
ethers-providers = { version = "2.0.14", features = ["rustls"] }
ethers-signers = { version = "2.0.14" }
ethers-middleware = { version = "2.0.14" }
redis = { version = "0.25", features = ["tokio-comp"] }
rand = "0.8"
hex = "0.4"
once_cell = "1.19"
rust-mcp-sdk = { version = "0.8.3", features = ["server", "hyper-server", "macros"] }
async-trait = "0.1"
base64 = "0.21"
url = "2"

[dev-dependencies]
axum-test = "15"
tower = { version = "0.4", features = ["util"] }
